--- a/kompas/index.html
+++ b/kompas/index.html
@@ -292,8 +292,8 @@
                 {
                     nick: "Novites",
                     discord: "novites",
-                    posX: -1,
-                    posY: 2.8,
+                    posX: -3.4,
+                    posY: 3.4,
                     avatar: "https://i.ibb.co/1YzKJkCX/image.png",
                     description: "Brak opisu.",
                     views: "Brak danych",
@@ -308,8 +308,8 @@
                 {
                     nick: "Vexon",
                     discord: ".vexon.",
-                    posX: 1.6,
-                    posY: 1,
+                    posX: -1.2,
+                    posY: 3.6,
                     avatar: "https://i.ibb.co/kV3LFn2w/obraz-2025-05-12-172050994.png",
                     description: "Członek Roleplay'u od około 2022 roku. Właściciel czterech państw. Przedstawiciel kasty niegraficznej, a roleplay'owej. Często bywam nieaktywny oraz zdarza mi się mieć odmienne zdanie w wielu kwestiach. Interesuję się polityką, historią, muzyką i filmografią.",
                     views: "Protekcjonizm, Regulowany kapitalizm, Nacjonalizm, Unitaryzm, Etatyzm",
@@ -355,8 +355,8 @@
                 {
                     nick: "Lukasox",
                     discord: "lukasox",
-                    posX: 2.4,
-                    posY: -2,
+                    posX: 6.2,
+                    posY: -4.4,
                     avatar: "https://i.ibb.co/hGthdxW/obraz-2025-05-12-110716160.png",
                     description: "Najdłużej obecny członek Roleplay'u, jeden z założycieli oraz administrator serwera Discord. Łączę przyjemne z pożytecznym więc naukę grafiki 3D łączę z moją działalnością w Roleplay'u. W wolnym czasie moją pasją jest przede wszystkim kino.",
                     views: "Liberaltarianizm, Liberalizm klasyczny, Globalizm gospodarczy, Federalizm, Merytokracja, Umiarkowany progresywizm",
@@ -371,8 +371,8 @@
                 {
                     nick: "Banio",
                     discord: "b4gni4k",
-                    posX: 4,
-                    posY: -2.8,
+                    posX: 2.4,
+                    posY: -1.5,
                     avatar: "https://i.ibb.co/0Vzx598Y/image.png",
                     description: "Najmłodszy członek Roleplay'u oraz administrator serwera Discord. Aspiruję do zastania profesjonalnym grafikiem komputerowym w przyszłości. W samym Roleplay'u pełnię rolę pomocnika, świadcząc swojej pomocy głównie przy mapach, flagach i innych pomniejszych rzeczach powiązanych z Roleplay'em.",
                     views: "Ordoliberalizm, Umiarkowany federalizm, Liberalizm społeczny, Umiarkowany progresywizm",
@@ -387,8 +387,8 @@
                 {
                     nick: "SVH",
                     discord: "svh6296",
-                    posX: 3.5,
-                    posY: -4.6,
+                    posX: 2,
+                    posY: -4.4,
                     avatar: "https://i.ibb.co/n8rV81Zs/image.png",
                     description: "Jeden z ojców-żałożycieli Roleplay'u, twórca części jego fundamentów począwszy od 2020 roku. Piszę artykuły na wiki, newsy do gazety oraz zajmuję się tworzeniem nieskomplikowanych grafik. Objawiam sporadyczne epizody nieaktywności. Moje zainteresowania to historia oraz szeroko pojęta muzyka rockowa.",
                     views: "Minarchizm, Federalizm, Austriacka Szkoła Ekonomii, Libertariański feminizm, Transhumanizm, Monetaryzm",
@@ -413,11 +413,11 @@
             {
                     nick: "Jasek",
                     discord: "jasekkkk",
-                    posX: 0.5,
-                    posY: -3.8,
+                    posX: 1.1,
+                    posY: -5.3,
                     avatar: "https://i.ibb.co/4ZPn65TZ/obraz-2025-05-12-115105711.png",
                     description: "Administrator serwera Discord, twórca pierwszej mapy związanej z Roleplay'em a zarazem osoba z największą liczbą zarządzanych państw. Wykorzystuję projekt jako okazję do kształcenia się w dziedziniach grafiki i rysowania z którymi styczność mam od niedawna w ramach pasji. Fan motocykli, książek, ekonomii i geografii.",
-                    views: "Socjallibertarianizm, Cywilny libertarianizm, Paternalistyczny libertarianizm, Piratyzm, Technoliberalizm, Demokracja bezpośrednia",
+                    views: "Geolibertarianizm, Dywidenda obywatelska, Minarchizm, Demokracja płynna, Ekolibertarianizm, Pluralizm związkowy",
                     roles: [
                         {
                             name: "Księstwo Nowego Tuhalfu",
@@ -457,13 +457,29 @@
                     posX: 0.2,
                     posY: 4.5,
                     avatar: "https://i.ibb.co/mFT7gVck/image.png",
-                    description: "Brak opisu.",
-                    views: "Brak danych",
+                    description: "Członek Roleplay'u z przerwami od 2022 roku. Wykorzystuję projekt zarówno jako formę dobrej zabawy, jak i jako narzędzie do pogłębiania wiedzy o polityce, geografii oraz świecie. Moje zainteresowania to piłka nożna, muzyka klasyczna, historia i informatyka.",
+                    views: "Progresywny konserwatyzm, Etnonacjonalizm, Chrześcijański tradycjonalizm",
                     roles: [
                         {
                             name: "Republika Alezjo-Onecji",
                             icon: "https://i.ibb.co/F4qhgTrJ/image.png",
                             url: "https://grumqy.github.io/fangea/wiki/alezjo-onecja/"
+                        }
+                    ]
+                },
+                                {
+                    nick: "Jaro 3",
+                    discord: "wm_j3",
+                    posX: -6,
+                    posY: 4.2,
+                    avatar: "https://i.ibb.co/WNrgjvXH/fdggffds-ezgif-com-crop.gif",
+                    description: "Brak opisu.",
+                    views: "Brak danych",
+                    roles: [
+                        {
+                            name: "Republika Jarezji",
+                            icon: "https://i.ibb.co/kgTDrbRr/obraz-2025-06-20-225540893.png",
+                            url: "https://grumqy.github.io/fangea/wiki/jarezja/"
                         }
                     ]
                 },
