--- a/kompas/index.html
+++ b/kompas/index.html
@@ -359,7 +359,7 @@
                     posY: -4.4,
                     avatar: "https://i.ibb.co/hGthdxW/obraz-2025-05-12-110716160.png",
                     description: "Najdłużej obecny członek Roleplay'u, jeden z założycieli oraz administrator serwera Discord. Łączę przyjemne z pożytecznym więc naukę grafiki 3D łączę z moją działalnością w Roleplay'u. W wolnym czasie moją pasją jest przede wszystkim kino.",
-                    views: "Liberaltarianizm, Liberalizm klasyczny, Globalizm gospodarczy, Federalizm, Merytokracja, Umiarkowany progresywizm",
+                    views: "Liberaltarianizm, Minarchizm, Globalizm gospodarczy, Federalizm, Demokracja płynna, Umiarkowany progresywizm",
                     roles: [
                         {
                             name: "Rzeczpospolita Pamercja",
@@ -417,7 +417,7 @@
                     posY: -5.3,
                     avatar: "https://i.ibb.co/4ZPn65TZ/obraz-2025-05-12-115105711.png",
                     description: "Administrator serwera Discord, twórca pierwszej mapy związanej z Roleplay'em a zarazem osoba z największą liczbą zarządzanych państw. Wykorzystuję projekt jako okazję do kształcenia się w dziedziniach grafiki i rysowania z którymi styczność mam od niedawna w ramach pasji. Fan motocykli, książek, ekonomii i geografii.",
-                    views: "Geolibertarianizm, Dywidenda obywatelska, Minarchizm, Demokracja płynna, Ekolibertarianizm, Pluralizm związkowy",
+                    views: "Geolibertarianizm, Dywidenda obywatelska, Minarchizm, Demokracja płynna, Zielony libertarianizm, Pluralizm związkowy",
                     roles: [
                         {
                             name: "Księstwo Nowego Tuhalfu",
@@ -458,7 +458,7 @@
                     posY: 4.5,
                     avatar: "https://i.ibb.co/mFT7gVck/image.png",
                     description: "Członek Roleplay'u z przerwami od 2022 roku. Wykorzystuję projekt zarówno jako formę dobrej zabawy, jak i jako narzędzie do pogłębiania wiedzy o polityce, geografii oraz świecie. Moje zainteresowania to piłka nożna, muzyka klasyczna, historia i informatyka.",
-                    views: "Progresywny konserwatyzm, Etnonacjonalizm, Chrześcijański tradycjonalizm",
+                    views: "Progresywny konserwatyzm, Etnonacjonalizm, Chrześcijański tradycjonalizm, Autorytarny konserwatyzm, Umiarkowany etatyzm",
                     roles: [
                         {
                             name: "Republika Alezjo-Onecji",
@@ -474,7 +474,7 @@
                     posY: 4.2,
                     avatar: "https://i.ibb.co/WNrgjvXH/fdggffds-ezgif-com-crop.gif",
                     description: "Brak opisu.",
-                    views: "Brak danych",
+                    views: "Lewicowy nacjonalizm, Socjalizm państwowy, Eko-socjalizm, Tradycjonalizm, Rewolucjonizm, Autorytaryzm",
                     roles: [
                         {
                             name: "Republika Jarezji",
