--- a/wiki/index.html
+++ b/wiki/index.html
@@ -47,6 +47,7 @@
             <ul class="article-category">
                 <h1>Państwa</h1>
                 <li><a href="https://grumqy.github.io/fangea/wiki/lista_państw_świata/">Lista państw świata</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/alenia/">Alenia</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/atidalia/">Atidalia</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/ebengrad/">Ebengrad</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/fankladonia/">Fankladonia</a></li>
