--- a/wiki/alenia/index.html
+++ b/wiki/alenia/index.html
@@ -85,9 +85,9 @@ const dictionaryhtml = `<h1>Alenia</h1>
 <tr><th>dopelniacz</th><td>Alenii</td></tr>
 <tr><th>celownik</th><td>Alenii</td></tr>
 <tr><th>biernik</th><td>Alenię</td></tr>
-<tr><th>narzednik</th><td>Alenią</td></tr>
+<tr><th>narzędnik</th><td>Alenią</td></tr>
 <tr><th>miejscownik</th><td>Alenii</td></tr>
-<tr><th>wolacz</th><td>Alenio</td></tr>
+<tr><th>wołacz</th><td>Alenio</td></tr>
 </tbody>
 </table>
 <h2>wyrazy pokrewne</h2>
