--- a/wiki/edytor/index.html
+++ b/wiki/edytor/index.html
@@ -1374,7 +1374,7 @@ listContainers.forEach(listContainer => {
         }
         tableHeaders += `</tr>`;
 
-        const cases = ['mianownik', 'dopelniacz', 'celownik', 'biernik', 'narzednik', 'miejscownik', 'wolacz'];
+        const cases = ['mianownik', 'dopełniacz', 'celownik', 'biernik', 'narzędnik', 'miejscownik', 'wołacz'];
 
         cases.forEach(caseName => {
             let row = `\n<tr><th>${caseName}</th>`;
