--- a/wiki/edytor/index.html
+++ b/wiki/edytor/index.html
@@ -389,8 +389,8 @@
                             </tr>
                             <tr>
                                 <th>dopełniacz</th>
-                                <td><input type="text" id="dopelniacz-lp"></td>
-                                <td class="inflection-lm"><input type="text" id="dopelniacz-lm"></td>
+                                <td><input type="text" id="dopełniacz-lp"></td>
+                                <td class="inflection-lm"><input type="text" id="dopełniacz-lm"></td>
                             </tr>
                             <tr>
                                 <th>celownik</th>
@@ -404,8 +404,8 @@
                             </tr>
                             <tr>
                                 <th>narzędnik</th>
-                                <td><input type="text" id="narzednik-lp"></td>
-                                <td class="inflection-lm"><input type="text" id="narzednik-lm"></td>
+                                <td><input type="text" id="narzędnik-lp"></td>
+                                <td class="inflection-lm"><input type="text" id="narzędnik-lm"></td>
                             </tr>
                             <tr>
                                 <th>miejscownik</th>
@@ -414,8 +414,8 @@
                             </tr>
                             <tr>
                                 <th>wołacz</th>
-                                <td><input type="text" id="wolacz-lp"></td>
-                                <td class="inflection-lm"><input type="text" id="wolacz-lm"></td>
+                                <td><input type="text" id="wołacz-lp"></td>
+                                <td class="inflection-lm"><input type="text" id="wołacz-lm"></td>
                             </tr>
                         </tbody>
                     </table>
