--- a/wiki/alenia/index.html
+++ b/wiki/alenia/index.html
@@ -82,7 +82,7 @@ const dictionaryhtml = `<h1>Alenia</h1>
 <tbody>
 <tr><th>przypadek</th><th>liczba pojedyncza</th></tr>
 <tr><th>mianownik</th><td>Alenia</td></tr>
-<tr><th>dopelniacz</th><td>Alenii</td></tr>
+<tr><th>dopełniacz</th><td>Alenii</td></tr>
 <tr><th>celownik</th><td>Alenii</td></tr>
 <tr><th>biernik</th><td>Alenię</td></tr>
 <tr><th>narzędnik</th><td>Alenią</td></tr>
