--- a/wiki/index.html
+++ b/wiki/index.html
@@ -112,6 +112,7 @@
             <ul class="article-category">
                 <h1>Brak Kategorii</h1>
                 <li><a href="https://grumqy.github.io/fangea/wiki/lipławieck/">Lipławieck</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/podział_administracyjny_stanów_zjednoczonych/">Podział administracyjny Stanów Zjednoczonych</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/kanały_telewizyjne_w_pamercji/">Kanały telewizyjne w Pamercji</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/the_grimscape/">The Grimscape</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/województwo_pomerańskie/">Województwo pomerańskie</a></li>
