--- a/kompas/index.html
+++ b/kompas/index.html
@@ -359,7 +359,7 @@
                     posY: -4.4,
                     avatar: "https://i.ibb.co/hGthdxW/obraz-2025-05-12-110716160.png",
                     description: "Najdłużej obecny członek Roleplay'u, jeden z założycieli oraz administrator serwera Discord. Łączę przyjemne z pożytecznym więc naukę grafiki 3D łączę z moją działalnością w Roleplay'u. W wolnym czasie moją pasją jest przede wszystkim kino.",
-                    views: "Liberaltarianizm, Minarchizm, Globalizm gospodarczy, Federalizm, Demokracja płynna, Umiarkowany progresywizm",
+                    views: "Libertarianizm, Minarchizm, Globalizm gospodarczy, Federalizm, Demokracja bezpośrednia, Umiarkowany progresywizm",
                     roles: [
                         {
                             name: "Rzeczpospolita Pamercja",
@@ -391,7 +391,7 @@
                     posY: -4.4,
                     avatar: "https://i.ibb.co/n8rV81Zs/image.png",
                     description: "Jeden z ojców-żałożycieli Roleplay'u, twórca części jego fundamentów począwszy od 2020 roku. Piszę artykuły na wiki, newsy do gazety oraz zajmuję się tworzeniem nieskomplikowanych grafik. Objawiam sporadyczne epizody nieaktywności. Moje zainteresowania to historia oraz szeroko pojęta muzyka rockowa.",
-                    views: "Minarchizm, Federalizm, Austriacka Szkoła Ekonomii, Libertariański feminizm, Transhumanizm, Monetaryzm",
+                    views: "Minarchizm, Federalizm, Austriacka Szkoła Ekonomii, Libertariański feminizm, Transhumanizm, Monetaryzm, Progresywizm, Antyautorytaryzm, Antyklerykalizm",
                     roles: [
                         {
                             name: "Stany Zjednoczone Fangei",
