--- a/kompas/index.html
+++ b/kompas/index.html
@@ -296,7 +296,7 @@
                     posY: 3.4,
                     avatar: "https://i.ibb.co/1YzKJkCX/image.png",
                     description: "Brak opisu.",
-                    views: "Brak danych",
+                    views: "Socjaldemokracja, Państwo opiekuńcze, Regulacjonizm, Keynesowska szkoła w ekonomii, Miękki etatyzm, Ekologizm",
                     roles: [
                         {
                             name: "Republika Tuwalii",
@@ -391,7 +391,7 @@
                     posY: -4.4,
                     avatar: "https://i.ibb.co/n8rV81Zs/image.png",
                     description: "Jeden z ojców-żałożycieli Roleplay'u, twórca części jego fundamentów począwszy od 2020 roku. Piszę artykuły na wiki, newsy do gazety oraz zajmuję się tworzeniem nieskomplikowanych grafik. Objawiam sporadyczne epizody nieaktywności. Moje zainteresowania to historia oraz szeroko pojęta muzyka rockowa.",
-                    views: "Minarchizm, Federalizm, Austriacka Szkoła Ekonomii, Libertariański feminizm, Transhumanizm, Monetaryzm, Progresywizm, Antyautorytaryzm, Antyklerykalizm",
+                    views: "Minarchizm, Federalizm, Austriacka szkoła w ekonomii, Libertariański feminizm, Transhumanizm, Monetaryzm, Progresywizm, Antyautorytaryzm, Antyklerykalizm",
                     roles: [
                         {
                             name: "Stany Zjednoczone Fangei",
