--- a/radio/index.html
+++ b/radio/index.html
@@ -148,6 +148,9 @@
         main #radio-list ul a.genre_rock{
            display: contents; 
         }
+        main #radio-list ul a.genre_acousticrock{
+           display: contents; 
+        }
         main #radio-list ul a.genre_altrock{
            display: contents; 
         }
@@ -449,7 +452,7 @@
     <div>Filtruj wg gatunku</div>
     <ul>
         <form>
-        <input type="checkbox" id="genre_all" class="checkbox_select_all" data-categories="genre_pop;genre_citypop;genre_electro;genre_hiphop;genre_breakbeat;genre_breakcore;genre_hardstyle;genre_nightcore;genre_randb;genre_lofi;genre_phonk;genre_opera;genre_country;genre_swing;genre_disco;genre_rock;genre_altrock;genre_indierock;genre_punk;genre_emo;genre_metal;genre_klasyczna;genre_info" checked>
+        <input type="checkbox" id="genre_all" class="checkbox_select_all" data-categories="genre_pop;genre_citypop;genre_electro;genre_hiphop;genre_breakbeat;genre_breakcore;genre_hardstyle;genre_nightcore;genre_randb;genre_lofi;genre_phonk;genre_opera;genre_country;genre_swing;genre_disco;genre_rock;genre_acousticrock;genre_altrock;genre_indierock;genre_punk;genre_emo;genre_metal;genre_klasyczna;genre_info" checked>
         <input type="checkbox" id="genre_pop" checked>
         <input type="checkbox" id="genre_citypop" checked>
         <input type="checkbox" id="genre_electro" checked>
@@ -466,6 +469,7 @@
         <input type="checkbox" id="genre_swing" checked>
         <input type="checkbox" id="genre_disco" checked>
         <input type="checkbox" id="genre_rock" checked>
+        <input type="checkbox" id="genre_acousticrock" checked>
         <input type="checkbox" id="genre_altrock" checked>
         <input type="checkbox" id="genre_indierock" checked>
         <input type="checkbox" id="genre_punk" checked>
@@ -524,6 +528,9 @@
         </label>
         <label for="genre_rock" class="active">
             <li>Rock</li>
+        </label>
+        <label for="genre_rock" class="active">
+            <li>Rock Akustyczny</li>
         </label>
         <label for="genre_altrock" class="active">
             <li>Rock Alternatywny</li>
@@ -620,6 +627,12 @@
                     <li>
                         <img src="https://i.ibb.co/pvqX72J0/8080-i-rebel-Obszar-roboczy-1.png">
                         <span>-80/80</span>
+                    </li>  
+                </a>
+                <a href="https://www.youtube.com/playlist?list=PLXOsc_dJNyeXHVGD4DmY1sjUtFj7WCiPO" class="lang_en genre_rock genre_altrock genre_acousticrock loc_stanyzjednoczone">
+                    <li>
+                        <img src="https://i.ibb.co/JwKkLWMs/unplugged.png">
+                        <span>Radio Unplugged</span>
                     </li>  
                 </a>
         </ul>
