--- a/wiki/kürzer/index.html
+++ b/wiki/kürzer/index.html
@@ -28,7 +28,7 @@
 </nav>
 <article>
 <header><div>Kürzer</div><span>08.03.2025</span></header>
-<table class="infobox"><caption>Kürzer</caption><tbody><tr><td style="text-align: center;" colspan="2"> <img src="https://i.ibb.co/yBcKLyt/kurzerlogo.png" data-description="Logo" width="70%"> </td></tr><tr><td style="text-align: center;" colspan="2"> <img src="https://i.ibb.co/SmGx5gc/kurzerpregola.png" data-description="Sklep sieci Kürzer w Pregole"> </td></tr><tr><td style="text-align: center;" colspan="2"> Sklep sieci Kürzer w <a href="https://grumqy.github.io/fangea/wiki/pregoła/">Pregole</a>, Iznotia </td></tr><tr><th>Państwo</th><td> <img src="https://i.ibb.co/7JpBJm1/iznotia.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/iznotia/">Iznotia</a> </td></tr><tr><th>Siedziba</th><td> <a href="https://grumqy.github.io/fangea/wiki/derecht/">Derecht</a> </td></tr><tr><th>Udziałowcy</th><td> <a href="https://grumqy.github.io/fangea/wiki/cartland/">Cartland </a></td></tr><tr><th>Data założenia</th><td> 9 stycznia 2005 </td></tr><tr><th>Prezes</th><td><a href="https://grumqy.github.io/fangea/wiki/joseph_von_kuele/">Joseph von Kuele </a></td></tr></tbody></table>
+<table class="infobox"><caption>Kürzer</caption><tbody><tr><td style="text-align: center;" colspan="2"> <img src="https://i.ibb.co/pvy5R7yJ/obraz-2025-07-21-154711764.png" data-description="Logo" width="70%"> </td></tr><tr><td style="text-align: center;" colspan="2"> <img src="https://i.ibb.co/SmGx5gc/kurzerpregola.png" data-description="Sklep sieci Kürzer w Pregole"> </td></tr><tr><td style="text-align: center;" colspan="2"> Sklep sieci Kürzer w <a href="https://grumqy.github.io/fangea/wiki/pregoła/">Pregole</a>, Iznotia </td></tr><tr><th>Państwo</th><td> <img src="https://i.ibb.co/7JpBJm1/iznotia.png" class="icon small"> <a href="https://grumqy.github.io/fangea/wiki/iznotia/">Iznotia</a> </td></tr><tr><th>Siedziba</th><td> <a href="https://grumqy.github.io/fangea/wiki/derecht/">Derecht</a> </td></tr><tr><th>Udziałowcy</th><td> <a href="https://grumqy.github.io/fangea/wiki/cartland/">Cartland </a></td></tr><tr><th>Data założenia</th><td> 9 stycznia 2005 </td></tr><tr><th>Prezes</th><td><a href="https://grumqy.github.io/fangea/wiki/joseph_von_kuele/">Joseph von Kuele </a></td></tr></tbody></table>
 
 <p><b>Kürzer </b> –  założona w 2005 roku przez <a href="https://grumqy.github.io/fangea/wiki/joseph_von_kuele/">Josepha von Kuele</a> iznotiańska sieć sklepów dyskont, należąca do sieci sklepów <a href="https://grumqy.github.io/fangea/wiki/cartland/">Cartland</a>.</p>
 
@@ -53,7 +53,7 @@
  <div id="source-code" style="display:none;">{|infobox Kürzer
 |t=cc=2 [[timg:https://i.ibb.co/yBcKLyt/kurzerlogo.png|Logo]] |
 
-|t=cc=2 [[timg:https://i.ibb.co/SmGx5gc/kurzerpregola.png|Sklep sieci Kürzer w Pregole]] |
+|t=cc=2 [[timg:https://i.ibb.co/pvy5R7yJ/obraz-2025-07-21-154711764.png|Sklep sieci Kürzer w Pregole]] |
 |t=cc=2 Sklep sieci Kürzer w (https://grumqy.github.io/fangea/wiki/pregoła/)[Pregole], Iznotia |
 ! Państwo !| [[icon:https://i.ibb.co/7JpBJm1/iznotia.png|small]] (https://grumqy.github.io/fangea/wiki/iznotia/)[Iznotia] |
 ! Siedziba !| (https://grumqy.github.io/fangea/wiki/derecht/)[Derecht] |
