--- a/radio/index.html
+++ b/radio/index.html
@@ -557,6 +557,12 @@
     </div>
     <div id="radio-list">
         <ul>
+                <a href="https://www.youtube.com/playlist?list=PLgcUvx3vCvqjNnWnUmowSKpyZ8p_rvn8R" class="lang_ge genre_pop genre_electro genre_disco genre_rock loc_iznotia">
+                    <li>
+                        <img src="https://i.ibb.co/8gzPv0mJ/radio-pregolau-Obszar-roboczy-1.png">
+                        <span>Radio Pregolau International</span>
+                    </li>  
+                </a>
                 <a href="https://youtube.com/playlist?list=PLZkKDd2WNmkJ1dyDrX_GagxasBlahqhrR&si=_MBFe1LbubZpaIVj" class="lang_si genre_breakcore loc_nowytuhalf">
                     <li>
                         <img src="https://i.ibb.co/7r41HBt/zlam-kor.png">
