--- a/kompas/index.html
+++ b/kompas/index.html
@@ -276,8 +276,8 @@
                 {
                     nick: "Nataniel",
                     discord: "nie_wiem_jakis_random_122",
-                    posX: -1.5,
-                    posY: 0.5,
+                    posX: -1.8,
+                    posY: 4.2,
                     avatar: "https://i.ibb.co/mZ2KbTM/image.png",
                     description: "Członek Roleplay'u od 2022 roku, najpierw zarządzał Peczerią, od 2024 roku zajmuje się Fankladonią. Pierwotnie królowałem w dawnej Pieczarii, po banicji z tegoż ambitnego królestwa wróciłem budować masonerię Fankladonii. Interesuję się architekturą, me skrajne poglądy centrysty doprowadziły do zabudowania kilku miast tylko kamienicami.",
                     views: "Socjalliberalizm, Centryzm",
@@ -292,8 +292,8 @@
                 {
                     nick: "Novites",
                     discord: "novites",
-                    posX: -3.4,
-                    posY: 3.4,
+                    posX: -2.8,
+                    posY: 2.0,
                     avatar: "https://i.ibb.co/1YzKJkCX/image.png",
                     description: "Brak opisu.",
                     views: "Socjaldemokracja, Państwo opiekuńcze, Regulacjonizm, Keynesowska szkoła w ekonomii, Miękki etatyzm, Ekologizm",
@@ -308,8 +308,8 @@
                 {
                     nick: "Vexon",
                     discord: ".vexon.",
-                    posX: -1.2,
-                    posY: 3.6,
+                    posX: -2.8,
+                    posY: 4.8,
                     avatar: "https://i.ibb.co/kV3LFn2w/obraz-2025-05-12-172050994.png",
                     description: "Członek Roleplay'u od około 2022 roku. Właściciel czterech państw. Przedstawiciel kasty niegraficznej, a roleplay'owej. Często bywam nieaktywny oraz zdarza mi się mieć odmienne zdanie w wielu kwestiach. Interesuję się polityką, historią, muzyką i filmografią.",
                     views: "Protekcjonizm, Regulowany kapitalizm, Nacjonalizm, Unitaryzm, Etatyzm",
@@ -387,11 +387,11 @@
                 {
                     nick: "SVH",
                     discord: "svh6296",
-                    posX: 2,
-                    posY: -4.4,
+                    posX: -1.5,
+                    posY: -3.5,
                     avatar: "https://i.ibb.co/n8rV81Zs/image.png",
                     description: "Jeden z ojców-żałożycieli Roleplay'u, twórca części jego fundamentów począwszy od 2020 roku. Piszę artykuły na wiki, newsy do gazety oraz zajmuję się tworzeniem nieskomplikowanych grafik. Objawiam sporadyczne epizody nieaktywności. Moje zainteresowania to historia oraz szeroko pojęta muzyka rockowa.",
-                    views: "Minarchizm, Federalizm, Austriacka szkoła w ekonomii, Libertariański feminizm, Transhumanizm, Monetaryzm, Progresywizm, Antyautorytaryzm, Antyklerykalizm",
+                    views: "Humanistyczny kapitalizm, Progresywizm, Liberalizm, Antyklerykalizm, Antyautorytaryzm, FeminizmHumanistyczny kapitalizm, Progresywizm, Liberalizm, Antyklerykalizm, Antyautorytaryzm, Feminizm",
                     roles: [
                         {
                             name: "Stany Zjednoczone Fangei",
@@ -413,11 +413,11 @@
             {
                     nick: "Jasek",
                     discord: "jasekkkk",
-                    posX: 1.1,
-                    posY: -5.3,
+                    posX: -2.8,
+                    posY: -1.7,
                     avatar: "https://i.ibb.co/4ZPn65TZ/obraz-2025-05-12-115105711.png",
                     description: "Administrator serwera Discord, twórca pierwszej mapy związanej z Roleplay'em a zarazem osoba z największą liczbą zarządzanych państw. Wykorzystuję projekt jako okazję do kształcenia się w dziedziniach grafiki i rysowania z którymi styczność mam od niedawna w ramach pasji. Fan motocykli, książek, ekonomii i geografii.",
-                    views: "Geolibertarianizm, Dywidenda obywatelska, Minarchizm, Demokracja płynna, Zielony libertarianizm, Pluralizm związkowy",
+                    views: "Ekonomia społeczna, Synteza neoklasyczna, Kapitalizm reński, Federalizm, Georgizm, Liberalizm",
                     roles: [
                         {
                             name: "Księstwo Nowego Tuhalfu",
@@ -454,8 +454,8 @@
                 {
                     nick: "Michalik",
                     discord: "michalik",
-                    posX: 0.2,
-                    posY: 4.5,
+                    posX: 0.9,
+                    posY: 4.3,
                     avatar: "https://i.ibb.co/mFT7gVck/image.png",
                     description: "Członek Roleplay'u z przerwami od 2022 roku. Wykorzystuję projekt zarówno jako formę dobrej zabawy, jak i jako narzędzie do pogłębiania wiedzy o polityce, geografii oraz świecie. Moje zainteresowania to piłka nożna, muzyka klasyczna, historia i informatyka.",
                     views: "Progresywny konserwatyzm, Etnonacjonalizm, Chrześcijański tradycjonalizm, Autorytarny konserwatyzm, Umiarkowany etatyzm",
@@ -467,11 +467,11 @@
                         }
                     ]
                 },
-                                {
+                {
                     nick: "Jaro 3",
                     discord: "wm_j3",
-                    posX: -6,
-                    posY: 4.2,
+                    posX: -6.4,
+                    posY: 5.2,
                     avatar: "https://i.ibb.co/WNrgjvXH/fdggffds-ezgif-com-crop.gif",
                     description: "Brak opisu.",
                     views: "Lewicowy nacjonalizm, Socjalizm państwowy, Eko-socjalizm, Tradycjonalizm, Rewolucjonizm, Autorytaryzm",
@@ -481,6 +481,18 @@
                             icon: "https://i.ibb.co/kgTDrbRr/obraz-2025-06-20-225540893.png",
                             url: "https://grumqy.github.io/fangea/wiki/jarezja/"
                         }
+                    ]
+                },
+                {
+                    nick: "J4kubovskyy",
+                    discord: "j4kubovskyy",
+                    posX: 4.0,
+                    posY: -0.2,
+                    avatar: "https://maskolandia.pl/301-large_default/slawomir-mentzen-maska.jpg",
+                    description: "Brak opisu.",
+                    views: "Model helwecki, Konserwatywny liberalizm, Narodowy konserwatyzm, Wolny handel, Federalizm",
+                    roles: [
+
                     ]
                 },
             ];
