--- a/kompas/index.html
+++ b/kompas/index.html
@@ -391,7 +391,7 @@
                     posY: -3.5,
                     avatar: "https://i.ibb.co/n8rV81Zs/image.png",
                     description: "Jeden z ojców-żałożycieli Roleplay'u, twórca części jego fundamentów począwszy od 2020 roku. Piszę artykuły na wiki, newsy do gazety oraz zajmuję się tworzeniem nieskomplikowanych grafik. Objawiam sporadyczne epizody nieaktywności. Moje zainteresowania to historia oraz szeroko pojęta muzyka rockowa.",
-                    views: "Humanistyczny kapitalizm, Progresywizm, Liberalizm, Antyklerykalizm, Antyautorytaryzm, FeminizmHumanistyczny kapitalizm, Progresywizm, Liberalizm, Antyklerykalizm, Antyautorytaryzm, Feminizm",
+                    views: "Humanistyczny kapitalizm, Progresywizm, Liberalizm, Antyklerykalizm, Antyautorytaryzm, Feminizm",
                     roles: [
                         {
                             name: "Stany Zjednoczone Fangei",
