--- a/kompas/index.html
+++ b/kompas/index.html
@@ -312,7 +312,7 @@
                     posY: 4.8,
                     avatar: "https://i.ibb.co/kV3LFn2w/obraz-2025-05-12-172050994.png",
                     description: "Członek Roleplay'u od około 2022 roku. Właściciel czterech państw. Przedstawiciel kasty niegraficznej, a roleplay'owej. Często bywam nieaktywny oraz zdarza mi się mieć odmienne zdanie w wielu kwestiach. Interesuję się polityką, historią, muzyką i filmografią.",
-                    views: "Protekcjonizm, Regulowany kapitalizm, Nacjonalizm, Unitaryzm, Etatyzm",
+                    views: "Paternalistyczny konserwatyzm, Neonacjonalizm, Regulacjonizm, Unitaryzm, Etatyzm, Solidaryzm",
                     roles: [
                         {
                             name: "Iznotiańska Republika Demokratyczna",
