--- a/radio/index.html
+++ b/radio/index.html
@@ -529,7 +529,7 @@
         <label for="genre_rock" class="active">
             <li>Rock</li>
         </label>
-        <label for="genre_rock" class="active">
+        <label for="genre_acousticrock" class="active">
             <li>Rock Akustyczny</li>
         </label>
         <label for="genre_altrock" class="active">
@@ -725,3 +725,4 @@ function filterRadioStations(){
 </body>
 
 </html>
+
