--- a/radio/index.html
+++ b/radio/index.html
@@ -641,6 +641,12 @@
                         <span>Radio Unplugged</span>
                     </li>  
                 </a>
+                <a href="https://www.youtube.com/playlist?list=PLQK-CIQhtz9MuofLjAn6bJrF1g15MreUH" class="lang_it genre_disco loc_liwonia">
+                    <li>
+                        <img src="https://i.ibb.co/cKHBFVsG/doro-Obszar-roboczy-1.png">
+                        <span>d'oro FM</span>
+                    </li>  
+                </a>
         </ul>
     </div>
     </main>
@@ -725,4 +731,5 @@ function filterRadioStations(){
 </body>
 
 </html>
+
 
